--- a/package.json
+++ b/package.json
@@ -25,10 +25,6 @@
   "homepage": "",
   "license": "MIT",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
     "@tailwindcss/typography": "^0.4.1",
     "@tippyjs/react": "^4.2.5",
     "axios": "^0.21.1",
@@ -38,6 +34,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "register-service-worker": "^1.7.2",
     "snyk": "^1.660.0",
     "tailwindcss": "^2.2.4"
