--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^4.2.0",
     "register-service-worker": "^1.7.2",
     "snyk": "^1.667.0",
+    "swr": "^0.5.6",
     "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
