:arrow_up: Upgrade dependencies
- @tailwindcss/typography    ^0.4.1  →    ^0.5.0
- @tippyjs/react             ^4.2.5  →    ^4.2.6
- axios                     ^0.21.4  →   ^0.24.0
- nanoid                    ^3.1.28  →   ^3.1.30
- react-icons                ^4.2.0  →    ^4.3.1
- snyk                     ^1.722.0  →  ^1.789.0
- swr                        ^1.0.1  →    ^1.1.1
- tailwindcss               ^2.2.16  →    ^3.0.1

--- a/package.json
+++ b/package.json
@@ -25,20 +25,20 @@
   "homepage": "",
   "license": "MIT",
   "dependencies": {
-    "@tailwindcss/typography": "^0.4.1",
-    "@tippyjs/react": "^4.2.5",
-    "axios": "^0.21.4",
+    "@tailwindcss/typography": "^0.5.0",
+    "@tippyjs/react": "^4.2.6",
+    "axios": "^0.24.0",
     "dayjs": "^1.10.7",
     "he": "^1.2.0",
-    "nanoid": "^3.1.28",
+    "nanoid": "^3.1.30",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.3.1",
     "register-service-worker": "^1.7.2",
-    "snyk": "^1.722.0",
-    "swr": "^1.0.1",
-    "tailwindcss": "^2.2.16"
+    "snyk": "^1.789.0",
+    "swr": "^1.1.1",
+    "tailwindcss": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -48,7 +48,9 @@
     "@babel/plugin-proposal-export-default-from": "^7.16.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-flow": "^7.16.0",
     "@babel/plugin-transform-object-assign": "^7.16.0",
+    "@babel/plugin-transform-react-jsx": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
