--- a/package.json
+++ b/package.json
@@ -85,15 +85,20 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
-    "node-sass": "^7.0.1",
     "postcss": "^8.4.12",
     "postcss-cli": "^9.1.0",
     "postcss-loader": "^6.2.1",
     "prettier": "^2.6.2",
     "prettier-eslint": "^13.0.0",
     "prettier-stylelint": "^0.4.2",
-    "sass-lint": "^1.13.1",
+    "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
+    "stylelint": "^14.8.1",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-prettier-scss": "0.0.1",
+    "stylelint-config-standard": "25.0.0",
+    "stylelint-config-standard-scss": "3.0.0",
+    "stylelint-prettier": "2.0.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
     "typescript": "^4.6.3",
@@ -140,7 +145,8 @@
       "plugin:react/recommended",
       "plugin:react-hooks/recommended",
       "plugin:jsx-a11y/recommended",
-      "prettier"
+      "prettier",
+      "stylelint"
     ],
     "plugins": [
       "compat",
@@ -173,7 +179,8 @@
         }
       ],
       "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn"
+      "react-hooks/exhaustive-deps": "warn",
+      "jest/no-deprecated-functions": "off"
     }
   },
   "prettier": {
