--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Template for a barebones Vercel hosted React/Tailwind CSS PWA with an API endpoint powered by a serverless function",
   "private": true,
   "engines": {
-    "node": ">= 14.x",
-    "npm": ">= 7.x",
-    "yarn": ">= 1.22.x"
+    "node": ">= 16.x",
+    "npm": ">= 8.x"
   },
+  "type": "module",
   "scripts": {
-    "build": "webpack --color",
-    "clean": "rm -rf ./public",
+    "build": "vite build",
+    "dev": "vite serve --port $PORT",
+    "preview": "vite preview",
     "start": "cross-env NODE_ENV=development vercel dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,95 +26,65 @@
   "homepage": "",
   "license": "MIT",
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.4",
-    "@tippyjs/react": "^4.2.6",
-    "axios": "^0.27.2",
-    "dayjs": "^1.11.5",
-    "he": "^1.2.0",
-    "nanoid": "^4.0.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "register-service-worker": "^1.7.2",
-    "swr": "^1.3.0",
-    "tailwindcss": "^3.1.8"
+    "@tippyjs/react": "4.2.6",
+    "axios": "0.27.2",
+    "cross-env": "7.0.3",
+    "dayjs": "1.11.5",
+    "dotenv": "16.0.1",
+    "he": "1.2.0",
+    "nanoid": "4.0.0",
+    "prop-types": "15.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "4.4.0",
+    "swr": "1.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/eslint-parser": "^7.18.9",
-    "@babel/eslint-plugin": "^7.18.10",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-export-default-from": "^7.18.10",
-    "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-object-assign": "^7.18.6",
-    "@babel/plugin-transform-react-jsx": "^7.18.10",
-    "@babel/plugin-transform-runtime": "^7.18.10",
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/runtime": "^7.18.9",
-    "@fullhuman/postcss-purgecss": "^4.1.3",
-    "autoprefixer": "^10.4.8",
-    "babel-loader": "^8.2.5",
-    "babel-plugin-add-react-displayname": "^0.0.5",
-    "compression-webpack-plugin": "^10.0.0",
-    "concurrently": "^7.3.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
-    "cssnano": "^5.1.12",
-    "dotenv": "^16.0.1",
-    "eslint": "^8.21.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-compat": "^4.0.2",
-    "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-markdown": "^3.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-security": "^1.5.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "postcss": "^8.4.16",
-    "postcss-cli": "^10.0.0",
-    "postcss-loader": "^7.0.1",
-    "prettier": "^2.7.1",
-    "prettier-eslint": "^15.0.1",
-    "prettier-stylelint": "^0.4.2",
-    "sass": "^1.54.4",
-    "sass-loader": "^13.0.2",
-    "stylelint": "^14.10.0",
+    "@babel/eslint-parser": "7.18.9",
+    "@babel/eslint-plugin": "7.18.10",
+    "@babel/preset-env": "7.18.10",
+    "@fullhuman/postcss-purgecss": "4.1.3",
+    "@tailwindcss/typography": "0.5.4",
+    "@vitejs/plugin-react": "2.0.1",
+    "autoprefixer": "10.4.8",
+    "babel-plugin-add-react-displayname": "0.0.5",
+    "cssnano": "5.1.12",
+    "eslint": "8.21.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-compat": "4.0.2",
+    "eslint-plugin-html": "7.1.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-markdown": "3.0.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-security": "1.5.0",
+    "postcss": "8.4.16",
+    "postcss-cli": "10.0.0",
+    "prettier": "2.7.1",
+    "prettier-eslint": "15.0.1",
+    "prettier-stylelint": "0.4.2",
+    "sass": "1.54.4",
+    "stylelint": "14.10.0",
     "stylelint-config-prettier": "9.0.3",
     "stylelint-config-prettier-scss": "0.0.1",
     "stylelint-config-standard": "27.0.0",
     "stylelint-config-standard-scss": "5.0.0",
     "stylelint-prettier": "2.0.0",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.4",
-    "vercel": "^27.4.0",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "workbox-webpack-plugin": "^6.5.4"
+    "tailwindcss": "3.1.8",
+    "vercel": "27.4.0",
+    "vite": "3.0.7",
+    "vite-plugin-html": "3.2.0",
+    "vite-plugin-pwa": "0.12.3"
   },
   "babel": {
     "plugins": [
-      "@babel/plugin-proposal-class-properties",
-      "@babel/plugin-proposal-export-default-from",
-      "@babel/plugin-proposal-object-rest-spread",
-      "@babel/plugin-syntax-dynamic-import",
-      "@babel/plugin-transform-object-assign",
-      "@babel/plugin-transform-runtime",
       "add-react-displayname"
     ],
     "presets": [
-      "@babel/preset-env",
-      "@babel/react"
+      "@babel/preset-env"
     ]
   },
   "browserslist": {
@@ -132,7 +103,13 @@
     "env": {
       "browser": true,
       "es6": true,
+      "commonjs": true,
       "node": true
+    },
+    "settings": {
+      "jest": {
+        "version": 28
+      }
     },
     "extends": [
       "airbnb",
@@ -154,11 +131,13 @@
       "security"
     ],
     "parserOptions": {
-      "ecmaVersion": 11,
+      "ecmaVersion": "latest",
       "allowImportExportEverywhere": true,
-      "parser": "babel-parser",
+      "parser": "@eslint/babel-parser",
       "ecmaFeatures": {
-        "jsx": true
+        "jsx": true,
+        "impliedStrict": true,
+        "modules": true
       },
       "sourceType": "module"
     },
