--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@babel/preset-env": "7.20.2",
     "@fullhuman/postcss-purgecss": "5.0.0",
     "@tailwindcss/typography": "0.5.8",
-    "@vitejs/plugin-react": "3.0.0",
+    "@vitejs/plugin-react-swc": "3.0.0",
     "autoprefixer": "10.4.13",
     "babel-plugin-add-react-displayname": "0.0.5",
     "cssnano": "5.1.14",
