--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Template for a barebones Vercel hosted React/Tailwind CSS PWA with an API endpoint powered by a serverless function",
   "private": true,
   "engines": {
-    "node": ">= 16.x",
+    "node": ">= 18.x",
     "npm": ">= 8.x"
   },
   "type": "module",
   "scripts": {
-    "build": "vite build",
-    "dev": "vite serve --port $PORT",
+    "build": "npx vite build",
+    "dev": "npx vite serve --port $PORT",
     "preview": "vite preview",
-    "start": "cross-env NODE_ENV=development vercel dev",
+    "start": "cross-env NODE_ENV=development npx vercel dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -38,127 +38,32 @@
     "swr": "2.2.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.22.15",
-    "@babel/eslint-plugin": "7.22.10",
-    "@babel/preset-env": "7.22.20",
+    "@biomejs/biome": "1.2.2",
     "@fullhuman/postcss-purgecss": "5.0.0",
     "@tailwindcss/typography": "0.5.10",
     "@vitejs/plugin-react-swc": "3.3.2",
     "autoprefixer": "10.4.15",
-    "babel-plugin-add-react-displayname": "0.0.5",
     "cssnano": "6.0.1",
-    "cz-git": "^1.7.1",
-    "eslint": "8.49.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-compat": "4.2.0",
-    "eslint-plugin-html": "7.1.0",
-    "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-markdown": "3.0.1",
-    "eslint-plugin-prettier": "5.0.0",
-    "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-security": "1.7.1",
+    "cz-git": "1.7.1",
     "postcss": "8.4.30",
     "postcss-cli": "10.1.0",
-    "prettier": "3.0.3",
-    "prettier-eslint": "15.0.1",
-    "prettier-stylelint": "0.4.2",
     "sass": "1.67.0",
     "stylelint": "15.10.3",
     "stylelint-config-standard": "34.0.0",
     "stylelint-config-standard-scss": "11.0.0",
-    "stylelint-prettier": "4.0.2",
     "tailwindcss": "3.3.3",
     "vercel": "32.2.5",
     "vite": "4.4.9",
     "vite-plugin-html": "3.2.0",
     "vite-plugin-pwa": "0.16.5"
   },
-  "babel": {
-    "plugins": [
-      "add-react-displayname"
-    ],
-    "presets": [
-      "@babel/preset-env"
-    ]
-  },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "eslintConfig": {
-    "env": {
-      "browser": true,
-      "es6": true,
-      "commonjs": true,
-      "node": true
-    },
-    "settings": {
-      "jest": {
-        "version": 28
-      }
-    },
-    "extends": [
-      "airbnb",
-      "plugin:react/recommended",
-      "plugin:react-hooks/recommended",
-      "plugin:jsx-a11y/recommended",
-      "prettier",
-      "stylelint"
-    ],
-    "plugins": [
-      "compat",
-      "html",
-      "import",
-      "jsx-a11y",
-      "markdown",
-      "prettier",
-      "react",
-      "react-hooks",
-      "security"
-    ],
-    "parserOptions": {
-      "ecmaVersion": "latest",
-      "allowImportExportEverywhere": true,
-      "parser": "@eslint/babel-parser",
-      "ecmaFeatures": {
-        "jsx": true,
-        "impliedStrict": true,
-        "modules": true
-      },
-      "sourceType": "module"
-    },
-    "rules": {
-      "react/jsx-filename-extension": [
-        "error",
-        {
-          "extensions": [
-            ".js",
-            ".jsx"
-          ]
-        }
-      ],
-      "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn",
-      "jest/no-deprecated-functions": "off"
-    }
-  },
-  "prettier": {
-    "printWidth": 120,
-    "semi": true,
-    "singleQuote": true,
-    "tabwidth": true,
-    "trailingComma": "all"
   },
   "config": {
     "commitizen": {
