--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tippyjs/react": "4.2.6",
     "axios": "1.5.0",
     "cross-env": "7.0.3",
+    "daisyui": "3.7.5",
     "dayjs": "1.11.9",
     "dotenv": "16.3.1",
     "prop-types": "15.8.1",
