--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Template for a barebones Vercel hosted React/Tailwind CSS PWA with an API endpoint powered by a serverless function",
   "private": true,
   "engines": {
-    "node": ">= 20.x",
+    "node": ">= 22.x",
     "npm": ">= 10.x"
   },
   "type": "module",
@@ -26,10 +26,10 @@
   "homepage": "",
   "license": "MIT",
   "dependencies": {
+    "@tailwindcss/vite": "4.0.0",
     "@tippyjs/react": "4.2.6",
-    "axios": "1.7.9",
     "cross-env": "7.0.3",
-    "daisyui": "4.12.23",
+    "daisyui": "5.0.0-beta.2",
     "dayjs": "1.11.13",
     "dotenv": "16.4.7",
     "prop-types": "15.8.1",
@@ -40,30 +40,19 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@fullhuman/postcss-purgecss": "7.0.2",
     "@tailwindcss/typography": "0.5.16",
     "@vitejs/plugin-react-swc": "3.7.2",
-    "autoprefixer": "10.4.20",
-    "cssnano": "7.0.6",
     "cz-git": "1.11.0",
-    "postcss": "8.5.1",
-    "postcss-cli": "11.0.0",
-    "sass": "1.83.4",
     "stylelint": "16.14.0",
     "stylelint-config-standard": "37.0.0",
-    "stylelint-config-standard-scss": "14.0.0",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.0",
     "vercel": "39.3.0",
     "vite": "6.0.11",
     "vite-plugin-html": "3.2.2",
     "vite-plugin-pwa": "0.21.1"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -76,7 +65,7 @@
     }
   },
   "volta": {
-    "node": "22.2.0",
-    "npm": "10.8.0"
+    "node": "22.13.1",
+    "npm": "10.9.2"
   }
 }
