--- a/biome.json
+++ b/biome.json
@@ -1,19 +1,18 @@
 {
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
   "files": {
-    "ignore": [
-      "**/.devcontainer/*",
-      "**/.git/*",
-      "**/.github/*",
-      "**/.history/*",
-      "**/.vscode/*",
-      "**/node_modules/*",
-      "**/public/*"
+    "includes": [
+      "**",
+      "!**/.devcontainer/**/*",
+      "!**/.git/**/*",
+      "!**/.github/**/*",
+      "!**/.history/**/*",
+      "!**/.vscode/**/*",
+      "!**/node_modules/**/*",
+      "!**/public/**/*"
     ]
   },
-  "organizeImports": {
-    "enabled": true
-  },
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
     "enabled": true,
     "rules": {
@@ -22,7 +21,17 @@
         "useKeyWithClickEvents": "off"
       },
       "style": {
-        "useBlockStatements": "error"
+        "useBlockStatements": "error",
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
       }
     }
   },
