--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": ">= 22.x",
     "npm": ">= 10.x"
   },
+  "packageManager": "npm@11.8.0",
   "type": "module",
   "scripts": {
     "build": "npx vite build",
@@ -26,33 +27,41 @@
   "homepage": "",
   "license": "MIT",
   "dependencies": {
-    "@tailwindcss/vite": "4.1.18",
-    "@tippyjs/react": "4.2.6",
-    "cross-env": "10.1.0",
-    "daisyui": "5.5.17",
-    "dayjs": "1.11.19",
-    "dotenv": "17.2.3",
-    "prop-types": "15.8.1",
-    "react": "19.2.4",
-    "react-dom": "19.2.4",
-    "react-icons": "5.5.0",
-    "swr": "2.4.0"
+    "@tailwindcss/vite": "^4.1.18",
+    "@tippyjs/react": "^4.2.6",
+    "cross-env": "^10.1.0",
+    "daisyui": "^5.5.17",
+    "dayjs": "^1.11.19",
+    "dotenv": "^17.2.3",
+    "prop-types": "^15.8.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-icons": "^5.5.0",
+    "swr": "^2.4.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.13",
-    "@tailwindcss/typography": "0.5.19",
-    "@vitejs/plugin-react-swc": "4.2.3",
-    "cz-git": "1.12.0",
-    "stylelint": "17.1.0",
-    "stylelint-config-standard": "40.0.0",
-    "tailwindcss": "4.1.18",
-    "vercel": "50.9.6",
-    "vite": "7.3.1",
-    "vite-plugin-html": "3.2.2",
-    "vite-plugin-pwa": "1.2.0"
+    "@biomejs/biome": "^2.3.14",
+    "@tailwindcss/typography": "^0.5.19",
+    "@vitejs/plugin-react-swc": "^4.2.3",
+    "cz-git": "^1.12.0",
+    "stylelint": "^17.1.1",
+    "stylelint-config-standard": "^40.0.0",
+    "tailwindcss": "^4.1.18",
+    "vercel": "^50.10.0",
+    "vite": "^7.3.1",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-pwa": "^1.2.0"
+  },
+  "overrides": {
+    "undici": "^7.20.0",
+    "tar": "^7.5.7"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -65,7 +74,7 @@
     }
   },
   "volta": {
-    "node": "22.13.1",
-    "npm": "10.9.2"
+    "node": "24.13.0",
+    "npm": "11.8.0"
   }
 }
